fix alignment

--- a/src/components/Combine.css
+++ b/src/components/Combine.css
@@ -62,6 +62,7 @@
 .form-container {
   padding: 16px 0px 16px 0px;
   border-radius: 5px;
+  width: 75%;
 }
 
 .form-container label {
@@ -73,7 +74,7 @@
 
 .form-container input[type="text"],
 .form-container input[type="email"] {
-  width: 75%;
+  width: 100%;
   padding: 10px;
   margin-bottom: 16px;
   border: none;
@@ -83,6 +84,8 @@
   .button-50 {
     padding: 12px 50px;
   }
+
+ 
 }
 
 .gradient_anim_btn_combine {
@@ -97,11 +100,14 @@
 
 
 /* For mobile devices */
-@media only screen and (max-width: 600px) {
-    /* Add your mobile-specific styles here */
-    /* .mobile{
-        color: yellow;
-    } */
+@media (max-width:500px) {
+   
+    .left-box button{
+      padding: 4px;
+      font-size: 12px;
+      width: 100%;
+      font-weight: 400;
+    }
 }
 
 /* For tablet devices */
